# LoL_data_pipeline

./: .$data_pipeline_flowchart.drawio.bkp  .coverage  .gitignore  API_query.ipynb  Dockerfile  README.md  data_pipeline.ipynb  data_pipeline_flowchart.drawio  data_pipeline_match.ipynb  data_pipeline_timeline.ipynb  dev_requirements.txt  docker-compose.yml  event_data.db  extract_events_from_timeline.py  getMatchTimeline.py  get_API_key.py  get_match_by_match_id.py  get_match_ids_by_puuid.py  get_match_timeline.py  get_puuid_by_summon_id.py  get_puuids_list.ipynb  get_summoner_ids_from_league_id.py  included_match_fields.csv  league_id.txt  league_na1.csv  lol_data_pipeline.drawio  lolapi_punchlist.txt  match_timeline.json  match_timeline_eda.ipynb  pyproject.toml  riot_API_query.ipynb  riot_API_query.py  run_tests.sh  sqlite_query.ipynb  summoner_ids.txt  ter|origin" | xargs git branch -d  wrangle_df_for_sql.py
project_root/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
project_root/backend/: api_client.py
project_root/backend/src/: MatchDto.py  MatchDto_class.py  MatchOverclass.py  MatchTimelineDto.py  MatchTimelineDto_class.py  api_client.py  connect_db.py  data_processor.py  db_updater.py  extract_events_from_timeline.py  insert_matches.py  parse_match_json.py  record_handler.py  testing.ipynb
project_root/frontend/: Dockerfile  app.py
project_root/frontend/templates/: index.html  match.html  summoner.html
project_root/mage-ai/: Dockerfile
project_root/mage-ai/lol_data_pipeline/: metadata.yaml
project_root/mage-ai/lol_data_pipeline/data_loaders/: riot_api.py
project_root/mage-ai/lol_data_pipeline/pipelines/match_data/: metadata.yaml
project_root/mage-ai/lol_data_pipeline/pipelines/match_timeline/: metadata.yaml
project_root/mage-ai/mage_data/lol_data_pipeline/: mage-ai.db
project_root/mage-ai/mage_data/lol_data_pipeline/.operation_history/: 2023-10-04
project_root/src/: MatchDto.py  MatchOverclass.py  MatchTimelineDto.py  SummonerDto.py  api_client.py  app.py  postgres_helperfile.py  record_handler.py  testing.ipynb
project_root/src/sql_tables/: challenges.sql  match_events.sql  match_metadata.sql  participant_frames.sql  perk_stats.sql  perk_style_selections.sql  perk_styles.sql  perks.sql  player_match_data.sql
project_root/tests/: test_MatchDto.py  test_MatchOverclass.py  test_MatchTimelineDto.py  test_get_match_by_match_id.py  test_get_match_ids_by_puuid.py  test_get_match_timeline.py  test_get_puuid_by_name.py  test_record_handler.py
project_root/tests/files/: summoner_ids_from_league_id
(+458 files in other folders)
