[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration_tests",
]

[tool.poetry]
name = "LOL_api"
version = "0.1.0"
description = "League of Legends API client and frontend"
authors = ["Nolan Meyer <meyer09@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">3.9.7"
backend = "^0.2.4.1"
matplotlib = "^3.8.1"
pandas = "^2.1.3"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
Requests = "^2.31.0"
streamlit = "^1.28.2"
sqlalchemy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
selenium = "*"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
repository = "https://github.com/Nolasaurus/LoL_data_pipeline"
documentation = "https://github.com/Nolasaurus/LoL_data_pipeline/blob/origin/README.md"

[tool.coverage.run]
source = ["src/"]
