[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration_tests",
]

[project]
name = "LOL_api"
version = "0.1.0"
description = "League of Legends API client and frontend"
authors = [{name = "Nolan Meyer", email = "meyer09@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "backend==0.2.4.1",
    "matplotlib==3.8.1",
    "pandas==2.1.3",
    "psycopg2==2.9.9",
    "python-dotenv==1.0.0",
    "Requests==2.31.0",
    "streamlit==1.28.2"
]


[project.optional-dependencies]
test = ["pytest"]

[project.urls]
repository = "https://github.com/Nolasaurus/LoL_data_pipeline"
documentation = "https://github.com/Nolasaurus/LoL_data_pipeline/blob/origin/README.md"
